feat: change is_active in database in PUT /manager
